@@ -15,6 +15,11 @@
 	  default-organization: record-sequential (default=old behaviour),
 	  line-sequential
 
+2009-10-08  human
+
+	* error.c, field.c, typeck.c : Fix field names "WORK$"->"FILLER"
+	  in warning/error messages
+
 2009-02-06  Roger While <simrw@sim-basis.de>
 
 	* pplex.l : Check all of "Area A" after AUTHOR etc.
